# sigmod-2024-contest

./: .gitignore  CMakeLists.txt  README.md  baseline.cpp  bruteforce.h  build_debug.sh  count_selectivity.cpp  distance.h  generate_groundtruth.cpp  getquery.cpp  hybrid_graph.cpp  hybrid_graph.h  io.h  plot.py  run.sh  test_simd_distance.cpp  test_thread_pool.cpp  thread_pool.h  timer.h  utils.h
pyglass/: CMakeLists.txt  LICENSE
pyglass/glass/: builder.hpp  graph.hpp  hash_table5.hpp  memory.hpp  neighbor.hpp  searcher.hpp  utils.hpp
pyglass/glass/hnsw/: hnsw.hpp
pyglass/glass/hnswlib/: hnswalg.h  hnswlib.h  space_l2.h  visited_list_pool.h
pyglass/glass/quant/: quant.hpp  sq8_sym_quant.hpp
pyglass/glass/simd/: distance.hpp
